# GoldenRaspberryAwards

./: .gitignore  README-tests.md  README.md  database.db  pyproject.toml
.github/workflows/: python-tests.yml
app/: database.py  main.py  models.py  utils.py
app/routers/: awards.py
tests/: __init__.py  conftest.py  test_awards_intervals.py  test_main.py  test_movies_upload.py
